--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-E39QJ5H6GC');
 </script>
+<script type="text/javascript" src="https://checkout.razorpay.com/v1/checkout.js"></script>
   
   <meta charset="utf-8">
   <title>Fixup4u</title>
