--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript" src="https://checkout.razorpay.com/v1/checkout.js"></script>
   
   <meta charset="utf-8">
-  <title>Fixup4u</title>
+  <title>Azores-Hyd </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
